<resources>
    <string name="app_name">Task Master</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_details">Task Details</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="guest">Guest</string>
    <string name="save">Save</string>
    <string name="faketask1">Shopping</string>
    <string name="faketask2">Cleaning</string>
    <string name="faketask3">Studying</string>
    <string name="theme">Theme</string>
    <string name="city">City</string>
    <string name="cafe">Cafe</string>
    <string name="night">Night</string>
    <string name="stateNew">NEW</string>
    <string name="stateAssigned">ASSIGNED</string>
    <string name="stateInProgress">IN PROGRESS</string>
    <string name="stateComplete">COMPLETE</string>
    <string name="team">Team</string>
    <string name="empty"> </string>
    <string name="logOut">Log Out</string>
    <string name="addLocation">Add my location to tasks I create</string>
    <string name="locationLabel">Task created in </string>
</resources>
