<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsActBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/usernameInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/usernameInput"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/settingsActTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/settings" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="saveSettingsClicked"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/colorThemeRadioGroup"
        tools:text="@string/save" />

    <RadioGroup
        android:id="@+id/colorThemeRadioGroup"
        android:layout_width="83dp"
        android:layout_height="166dp"
        android:layout_marginTop="56dp"
        android:checkedButton="@+id/radioButtonCafe"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput">

        <RadioButton
            android:id="@+id/radioButtonCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cafe"
            app:layout_constraintStart_toStartOf="@+id/usernameInput"
            app:layout_constraintTop_toTopOf="@+id/colorThemeRadioGroup" />

        <RadioButton
            android:id="@+id/radioButtonCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/city"
            app:layout_constraintStart_toEndOf="@+id/radioButtonCafe"
            app:layout_constraintTop_toTopOf="@+id/colorThemeRadioGroup" />

        <RadioButton
            android:id="@+id/radioButtonNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/night"
            app:layout_constraintStart_toEndOf="@+id/radioButtonCity"
            app:layout_constraintTop_toTopOf="@+id/colorThemeRadioGroup" />

    </RadioGroup>

    <TextView
        android:id="@+id/themeRadioGroupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        app:layout_constraintBottom_toTopOf="@+id/colorThemeRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/colorThemeRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>