<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskDetailsActBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsActivity">

    <TextView
        android:id="@+id/taskDetailsTitle"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/task_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/task_details" />

    <TextView
        android:id="@+id/taskDetailsBody"
        android:layout_width="293dp"
        android:layout_height="195dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsImage" />

    <RadioGroup
        android:id="@+id/taskStateRadioGroup"
        android:layout_width="155dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/taskDetailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsTitle">

        <!--        <TableRow>-->

        <RadioButton
            android:id="@+id/state_rb_new"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:onClick="stateRadioButtonChanged"
            android:text="@string/stateNew" />

        <RadioButton
            android:id="@+id/state_rb_assigned"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:onClick="stateRadioButtonChanged"
            android:text="@string/stateAssigned" />
        <!--        </TableRow>-->

        <!--        <TableRow>-->

        <RadioButton
            android:id="@+id/state_rb_inProgress"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:onClick="stateRadioButtonChanged"
            android:text="@string/stateInProgress" />

        <RadioButton
            android:id="@+id/state_rb_complete"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:onClick="stateRadioButtonChanged"
            android:text="@string/stateComplete" />
        <!--        </TableRow>-->

    </RadioGroup>

    <Button
        android:id="@+id/deleteTaskButton"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:onClick="deleteTaskButtonClicked"
        android:text="Delete Task"
        app:layout_constraintEnd_toEndOf="@+id/taskDetailsTitle"
        app:layout_constraintTop_toTopOf="@+id/taskStateRadioGroup" />

    <ImageView
        android:id="@+id/taskDetailsImage"
        android:layout_width="163dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStateRadioGroup"
        app:srcCompat="@drawable/notepadlogocafe" />

</androidx.constraintlayout.widget.ConstraintLayout>