<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffeeLightest"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/my_tasks" />

    <ImageView
        android:id="@+id/mainActLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/mainActTitle"
        app:layout_constraintEnd_toStartOf="@+id/mainActTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainActTitle"
        app:srcCompat="@drawable/notepad"
        tools:srcCompat="@drawable/notepad" />

    <Button
        android:id="@+id/button_addTask"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="goToAddTasksActivity"
        android:text="@string/add_task"
        android:textColor="@color/coffeeLightest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:text="Add Task" />

    <Button
        android:id="@+id/button_allTasks"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="goToAllTasksActivity"
        android:text="@string/all_tasks"
        android:textColor="@color/coffeeLightest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:text="@string/all_tasks" />

    <ImageView
        android:id="@+id/settingsgear"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="goToSettingsActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainActTitle"
        app:srcCompat="@drawable/settingsgear" />

    <Button
        android:id="@+id/task1button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goToTaskDetailsActivity"
        android:text="@string/faketask1"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/task2button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goToTaskDetailsActivity"
        android:text="@string/faketask2"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/task1button"
        app:layout_constraintStart_toStartOf="@+id/task1button"
        app:layout_constraintTop_toBottomOf="@+id/task1button" />

    <Button
        android:id="@+id/task3button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goToTaskDetailsActivity"
        android:text="@string/faketask3"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/task2button"
        app:layout_constraintStart_toStartOf="@+id/task2button"
        app:layout_constraintTop_toBottomOf="@+id/task2button"
        tools:text="@string/faketask3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="409dp"
        android:layout_height="296dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/task1button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rvtask1"
        android:layout_width="155dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tasksRecyclerView" />

    <TextView
        android:id="@+id/rvtask2"
        android:layout_width="149dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvtask1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvtask2" />

</androidx.constraintlayout.widget.ConstraintLayout>